# Website

./: .github-setup.sh  .gitignore  Anchor.toml  BUILD_FIX.md  BUILD_FIX_SUMMARY.md  BUILD_STRATEGY.md  CLASH_ROYALE_API_SETUP.md  CREATE_NEW_REPO.md  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_FIX.md  DEPLOYMENT_SOLUTION.md  DEPLOY_NOW.md  DEPLOY_SMART_CONTRACT.md  DEVNET_SETUP.md  DIRECT_WALLET_SYSTEM.md  ENV_LOCAL_TEMPLATE.md  ENV_VARS_COMPLETE_LIST.md  FAVICON_SETUP.md  FINALIZATION_SUMMARY.md  FINAL_DEPLOYMENT_STEPS.md  FIX_CARGO_VERSION.md  FIX_TOKEN.md  GITHUB_AUTH_HELP.md  INSTALL_SOLANA_CLI.md  MAINNET_DEPLOYMENT.md  NEXT_STEPS.md  PUSH_COMMANDS.md  PUSH_NEW_REPO.md  PUSH_NOW.md  PUSH_TO_GITHUB.md  PUSH_TO_GITHUB.sh  QUICK_PUSH.md  QUICK_START.md  QUICK_START_GUIDE.md  README.md  RUN_NOW.md  SOLANA_ESCROW_SETUP.md  SUPABASE_DEPLOYMENT.md  SUPABASE_EDGE_FUNCTIONS_SETUP.md  (+24 more)
app/: globals.css  layout.tsx  page.tsx
components/: AboutSection.tsx  AnimatedCounter.tsx  ArenaStats.tsx  ClientOnly.tsx  Dashboard.tsx  DisconnectWalletButton.tsx  DynamicWalletButton.tsx  ElixirBar.tsx  ElixirLoadingSpinner.tsx  GameButton.tsx  Leaderboard.tsx  MobileMenu.tsx  Navigation.tsx  Overview.tsx  ReferralSystem.tsx  ScrollReveal.tsx  TGETournament.tsx  TiltCard.tsx  TokenInfo.tsx  TournamentCountdown.tsx  TournamentMonitor.tsx  TournamentOverview.tsx  TournamentRules.tsx  TournamentSignupForm.tsx  WalletProvider.tsx  WalletStatus.tsx
lib/: clashRoyaleAPI.ts  constants.ts  points.ts  socialLinks.ts  (+8 more)
smart-contract/program/: Anchor.toml  Cargo.toml
smart-contract/program/src/: lib.rs
(+25 files in other folders)
