[package]
name = "clash-royale-escrow"
version = "0.1.0"
description = "Clash Royale 1v1 Wagering Escrow Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "clash_royale_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
